# Cutie

./: .gitignore  .pylintrc  README.md  interactive_demo.py  process_video.py  pyproject.toml  scripting_demo.py  scripting_demo_add_del_objects.py
cutie/: eval_vos.py  train.py
cutie/config/: eval_config.yaml  eval_plus_config.yaml  gui_config.yaml  train_config.yaml  video_config.yaml
cutie/config/data/: base.yaml  datasets.yaml  mega.yaml  with-mose.yaml
cutie/config/model/: small.yaml
cutie/dataset/: setup_training_data.py  static_dataset.py  utils.py  vos_dataset.py
cutie/inference/: image_feature_store.py  inference_core.py  kv_memory_store.py  memory_manager.py  object_manager.py
cutie/inference/data/: burst_test_dataset.py  burst_video_reader.py  video_reader.py  vos_test_dataset.py
cutie/inference/utils/: results_utils.py
cutie/model/: aux_modules.py  big_modules.py  cutie.py  group_modules.py  losses.py  modules.py  train_wrapper.py  trainer.py
cutie/model/utils/: resnet.py
cutie/utils/: download_models.py  get_default_model.py  log_integrator.py  logger.py  pano_utils.py
docs/: EVALUATION.md  INTERACTIVE.md  TRAINING.md  index.html  sources.txt  style.css
gui/: TIPS.md  click_controller.py  exporter.py  gui.py  gui_utils.py  interaction.py  interactive_utils.py  main_controller.py  reader.py  resource_manager.py
gui/ritm/: LICENSE  README.md  controller.py
scripts/: convert_burst_to_vos_train.py  download_models.py  mask_to_burst_json.py  merge_multi_scale.py
scripts/data/: find_empty_mask.py  find_empty_video.py  preprocess_lvos.py
(+32 files in other folders)
